--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -90,6 +90,7 @@ library(bestcost)
 
 ### Single baseline health data
 
+
 ```{r single exposure value}
 # Assess attributable cases using the AirQ+ export as input data
 bestcost_pm_copd <-
@@ -608,7 +609,8 @@ bestcost_pm_deaths_lifetable_airqplus <-
     population_midyear_male = airqplus_pm_deaths_yll[["pop"]]$midyear_population_male,
     population_midyear_female = airqplus_pm_deaths_yll[["pop"]]$midyear_population_female, 
     year_of_analysis =  airqplus_pm_deaths_yll[["input"]]$start_year, 
-    min_age = airqplus_pm_deaths_yll[["input"]]$apply_rr_from_age)
+    min_age = airqplus_pm_deaths_yll[["input"]]$apply_rr_from_age,
+    summary_uncertainty = NULL)
 
 # View(bestcost_pm_deaths_lifetable_airqplus)
 
