--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -44,7 +44,7 @@ library(credentials)
 library(gitcreds)
 library(devtools)
 
-# Load bestcost package (either current version or installed version)
+# Load healthiar package (either current version or installed version)
 devtools::load_all(export_all = FALSE)
 
 # Load data
@@ -57,34 +57,34 @@ data <- airqplus_pm_copd |>
 
 
 
-```{r Alternative 1 to load bestcost: Install own package from github, eval=FALSE, include=FALSE}
+```{r Alternative 1 to load healthiar: Install own package from github, eval=FALSE, include=FALSE}
 # Install own package from github as suggested here: https://stackoverflow.com/a/71846333/6104907
-if(!"bestcost" %in% installed.packages()[, "Package"]){
+if(!"healthiar" %in% installed.packages()[, "Package"]){
   #gitcreds::gitcreds_set()
   #usethis::use_git_config(user.name = "YourName", user.email = "your@mail.com") # run if installation doesn't work
   credentials::set_github_pat() # paste github PAT if prompted
   devtools::install_github(repo = "best-cost/best-cost_WPs",
-                           subdir = "/r_package/bestcost",
+                           subdir = "/r_package/healthiar",
                            ref = "HEAD", # Branch name (by default "HEAD") as a string
                            force = TRUE)
 }
-library(bestcost)
+library(healthiar)
 ```
 
 
 
-```{r Alternative 2 to load bestcost: load zip from local source, eval=FALSE, include=FALSE}
-detach("package:bestcost", unload = TRUE) # detach bestcost
+```{r Alternative 2 to load healthiar: load zip from local source, eval=FALSE, include=FALSE}
+detach("package:healthiar", unload = TRUE) # detach healthiar
 # Package as .zip file
 devtools::build(binary = TRUE, path = "../testing/input/") # Save current state of package as .zip file (e.g. to directly test changes in functions)
-install.packages("../testing/input/bestcost_0.0.0.1.zip", repos=NULL, type='source') # Install package from source
+install.packages("../testing/input/healthiar_0.0.0.1.zip", repos=NULL, type='source') # Install package from source
 
 
 # Package as .tar.gz file
 devtools::build(path = "../") # Save current state of package as tar.gz file (e.g. to directly test changes in functions)
-install.packages("../testing/input/bestcost_0.0.0.1.tar.gz", repos=NULL, type='source') # Install package from source
+install.packages("../testing/input/healthiar_0.0.0.1.tar.gz", repos=NULL, type='source') # Install package from source
 
-library(bestcost)
+library(healthiar)
 ```
 
 # Calculate health impacts
@@ -97,7 +97,7 @@ library(bestcost)
 
 # Calculate COPD cases attributable to PM exposure
 results_pm_copd <-
-  bestcost::attribute_health(
+  healthiar::attribute_health(
     exp_central = data$mean_concentration,                      # 8.85
     cutoff_central = data$cut_off_value,                        # 5
     bhd_central = data$prevalence,                              # 30747
@@ -119,7 +119,7 @@ View(results_pm_copd$detailed$raw)
 ```{r single exposure value}
 # Assess attributable cases using the AirQ+ export as input data
 bestcost_pm_copd <-
-  bestcost::attribute_health(
+  healthiar::attribute_health(
     exp_central = airqplus_pm_copd$mean_concentration,
     cutoff_central = airqplus_pm_copd$cut_off_value,
     bhd_central = airqplus_pm_copd$incidents_per_100_000_per_year/1E5*airqplus_pm_copd$population_at_risk,
@@ -167,7 +167,7 @@ health_impact <- attribute(
 ```{r Monetize a simple case}
 # Monetize
 bestcost_pm_copd_costs <- 
-  bestcost::include_cost(output = bestcost_pm_copd, 
+  healthiar::include_cost(output = bestcost_pm_copd, 
                          valuation = 1000)
 ```
 
@@ -178,7 +178,7 @@ bestcost_pm_copd_costs <-
 # Assess attributable cases for multiple uncertainties at the same time
 # i.e. rr, bhd and exp
 bestcost_pm_copd_multiple <-
-  bestcost::attribute_health(
+  healthiar::attribute_health(
     exp_central = airqplus_pm_copd$mean_concentration,
     exp_lower = 8,
     exp_upper = 9,
@@ -200,7 +200,7 @@ bestcost_pm_copd_multiple <-
 
 # Assess iteration geographical sections keeping the multiple uncertainties
 system.time(bestcost_pm_copd_geo <-
-  bestcost::attribute_health(
+  healthiar::attribute_health(
     exp_central = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)),
     exp_lower = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)-0.1),
     exp_upper = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)+0.1),
@@ -226,7 +226,7 @@ system.time(bestcost_pm_copd_geo <-
 ```{r Social aspects in a simple case, eval=FALSE, include=FALSE}
 # Take into account social aspects
 bestcost_pm_copd_geo_social <- 
-  bestcost::include_social(output = bestcost_pm_copd_geo,
+  healthiar::include_social(output = bestcost_pm_copd_geo,
                            geo_id_raw = 1:1E4,
                            deprivation_weight = as.list(runif_with_seed(1E4, 0.5, 0.8, 1)))
 ```
@@ -236,7 +236,7 @@ bestcost_pm_copd_geo_social <-
 
 # Assess attributable cases using the AirQ+ export as input data
 bestcost_pm_alri_erf_dots_splinefun <-
-  bestcost::attribute_health(
+  healthiar::attribute_health(
     exp_central = airqplus_pm_copd$mean_concentration,
     cutoff_central = airqplus_pm_copd$cut_off_value,
     # cutoff_central = 0,
@@ -261,7 +261,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_alri_erf_dots_splinefun,
 
 # Assess attributable cases using the AirQ+ export as input data
 bestcost_pm_alri_erf_dots_approxfun <-
-  bestcost::attribute_health(
+  healthiar::attribute_health(
     exp_central = airqplus_pm_copd$mean_concentration,
     cutoff_central = airqplus_pm_copd$cut_off_value,
     # cutoff_central = 0,
@@ -288,7 +288,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_alri_erf_dots_approxfun,
 
 # Assess attributable cases using the AirQ+ export as input data
 bestcost_pm_copd_1rr <-
-  bestcost::attribute_health(
+  healthiar::attribute_health(
     exp_central = airqplus_pm_copd$mean_concentration,
     cutoff_central = airqplus_pm_copd$cut_off_value,
     cutoff_lower = airqplus_pm_copd$cut_off_value - 1,
@@ -332,7 +332,7 @@ niph_noise_ihd_result <-
 
 # Obtain attributable cases using the bestcost package and input data from niph
 bestcost_noise_ihd_expDist <- 
-  bestcost::attribute_health(
+  healthiar::attribute_health(
     exp_central = niph_noise_ihd_input$exposure_mean,
     prop_pop_exp = niph_noise_ihd_input$prop_exposed,
     cutoff_central = min(niph_noise_ihd_input$exposure_mean), 
@@ -351,7 +351,7 @@ check_bestcost(result_list_bestcost = bestcost_noise_ihd_expDist,
 # Obtain attributable cases using the bestcost package
 # for multiple geo_sections
 bestcost_noise_ihd_expDist_geo <- 
-  bestcost::attribute_health(
+  healthiar::attribute_health(
     exp_central = list(runif_with_seed(5,8,10,1), 
                        runif_with_seed(5,8,10,2), 
                        runif_with_seed(5,8,10,3)),
@@ -374,7 +374,7 @@ MRBRT_stroke <- readRDS(file = "../testing/input/MRBRT_stroke.RDS")
 pop_data <- readRDS(file = "../testing/input/pop_data.RDS")
 
 bestcost_pm_stroke_mr_brt <-
-  bestcost::attribute_health(
+  healthiar::attribute_health(
     exp_central = pop_data$Concentration,
     prop_pop_exp = pop_data$Viken,
     cutoff_central = 5,
@@ -415,7 +415,7 @@ niph_noise_ha_result <-
 
 # Obtain attributable cases using the bestcost package and input data from niph
 bestcost_noise_ha_ar <- 
-  bestcost::attribute_health_ar(
+  healthiar::attribute_health_ar(
     exp_central = niph_noise_ha_input$exposure_mean,
     # exp_lower = niph_noise_ha_input$exposure_mean - 1,
     # exp_upper = niph_noise_ha_input$exposure_mean + 1
@@ -432,7 +432,7 @@ check_bestcost(result_list_bestcost = bestcost_noise_ha_ar,
 # Obtain attributable cases using the bestcost package and input data from niph
 # for multiple geo_sections
 bestcost_noise_ha_ar_geo <- 
-  bestcost::attribute_health_ar(
+  healthiar::attribute_health_ar(
     exp_central = list(runif_with_seed(5,8,10,1), 
                           runif_with_seed(5,8,10,2), 
                           runif_with_seed(5,8,10,3)),
@@ -449,7 +449,7 @@ bestcost_noise_ha_ar_geo <-
 ```{r YLD with single relative risk}
 
 bestcost_pm_yld_singlebhd  <- 
-  bestcost::attribute_yld_from_prevalence(
+  healthiar::attribute_yld_from_prevalence(
     exp_central = 8.85, 
     cutoff_central = 5,    
     bhd_central = 25000,
@@ -475,7 +475,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_yld_singlebhd ,
 ```{r Test summary uncertainty attribute_health }
 
 bestcost_pm_copd_with_summary_uncertainty <- 
-  bestcost::attribute_health(
+  healthiar::attribute_health(
     exp_central = 8.85, 
     exp_lower = airqplus_pm_copd$mean_concentration - 1,
     exp_upper = airqplus_pm_copd$mean_concentration + 1,
@@ -506,7 +506,7 @@ print("Main estimate: ") ; bestcost_pm_copd_with_summary_uncertainty[["main"]][[
 ```{r Test summary uncertainty attribute_yld_from_prevalence }
 
 bestcost_pm_yld_singlebhd_with_summary_uncertainty  <- 
-  bestcost::attribute_yld_from_prevalence(
+  healthiar::attribute_yld_from_prevalence(
     exp_central = 8.85, 
     exp_lower = airqplus_pm_copd$mean_concentration - 1,
     exp_upper = airqplus_pm_copd$mean_concentration + 1,
@@ -536,7 +536,7 @@ niph_noise_ha_input <-
   dplyr::filter(!is.na(niph_noise_ha_excel$exposure_mean))
 
 bestcost_noise_ha_ar_with_summary_uncertainty <- 
-  bestcost::attribute_health_ar(
+  healthiar::attribute_health_ar(
     exp_central = niph_noise_ha_input$exposure_mean,
     exp_lower = niph_noise_ha_input$exposure_mean - 1,
     exp_upper = niph_noise_ha_input$exposure_mean + 1,
@@ -558,7 +558,7 @@ bestcost_noise_ha_ar[["main"]][["impact_rounded"]]
 ```{r additive approach}
 # Assess attributable cases using the BEST-COST task 1.4 report
 bestcost_pm_no2_mortality_additive <-
-  bestcost::attribute_health(
+  healthiar::attribute_health(
     approach_multiexposure = "additive",
     exp_central = c("pm2.5" = 8.1, "no2" =  10.9),
     cutoff_central =  setNames(c(0, 0), c("pm2.5", "no2")),
@@ -577,7 +577,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_no2_mortality_additive,
 ```{r multiplicative approach}
 # Assess attributable cases using the BEST-COST task 1.4 report
 bestcost_pm_no2_mortality_multiplicative <-
-  bestcost::attribute_health(
+  healthiar::attribute_health(
     approach_multiexposure = "multiplicative",
     exp_central = c("pm2.5" = 8.1, "no2" =  10.9),
     cutoff_central =  setNames(c(0, 0), c("pm2.5", "no2")),
@@ -596,7 +596,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_no2_mortality_multiplicative,
 ```{r combined approach}
 # Assess attributable cases using the BEST-COST task 1.4 report
 bestcost_pm_no2_mortality_multiplicative <-
-  bestcost::attribute_health(
+  healthiar::attribute_health(
     approach_multiexposure = "combined",
     exp_central = c("pm2.5" = 8.1, "no2" =  10.9),
     cutoff_central =  setNames(c(0, 0), c("pm2.5", "no2")),
@@ -622,7 +622,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_no2_mortality_multiplicative,
 # and input data from an AirQ+ case
 
 bestcost_pm_deaths_lifetable_airqplus <-
-  bestcost::attribute_deaths_from_lifetable(
+  healthiar::attribute_deaths_from_lifetable(
     approach_exposure = "single_year",
     approach_newborns = "with_newborns",
     exp_central = airqplus_pm_deaths_yll[["input"]]$mean_concentration, 
@@ -653,7 +653,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_deaths_lifetable_airqplus,
 
 # Calculate premature deaths using bestcost function
 bestcost_pm_deaths_lifetable_expDistribution <- 
-    bestcost::attribute_deaths_from_lifetable(
+    healthiar::attribute_deaths_from_lifetable(
       exp_central = c(8, 9, 10), # Fake data just for testing purposes
       prop_pop_exp = c(0.2, 0.3, 0.5), # Fake data just for testing purposes
       cutoff_central = input_data_mortality$cutoff[2],   # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
@@ -688,7 +688,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_deaths_lifetable_expDistributi
 
 # Now with input data from the Swiss project GeLuft
 bestcost_pm_yll_exposure_single_year_lifetable_geluft <-
-  bestcost::attribute_yll_from_lifetable(
+  healthiar::attribute_yll_from_lifetable(
     approach_exposure = "single_year",
     exp_central = input_data_mortality$exp[2], #exp CH 2019
     prop_pop_exp = 1,
@@ -721,7 +721,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_yll_exposure_single_year_lifet
 # Input data from an AirQ+ case
 
 bestcost_pm_yll_lifetable_airqplus <-
-  bestcost::attribute_yll_from_lifetable(
+  healthiar::attribute_yll_from_lifetable(
     approach_exposure = "constant",
     approach_newborns = "without_newborns",
     exp_central = airqplus_pm_deaths_yll[["input"]]$mean_concentration,
@@ -753,7 +753,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_airqplus,
 # Input data from an AirQ+ case
 
 bestcost_pm_yll_lifetable_airqplus_with_newborns <-
-  bestcost::attribute_yll_from_lifetable(
+  healthiar::attribute_yll_from_lifetable(
     approach_exposure = "constant",
     approach_newborns = "with_newborns",
     exp_central = airqplus_pm_deaths_yll[["input"]]$mean_concentration,
@@ -787,7 +787,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_airqplus_with_ne
 # with input data from the Swiss project GeLuft
 
 bestcost_pm_yll_lifetable_1rr_geluft <- 
-    bestcost::attribute_yll_from_lifetable(
+    healthiar::attribute_yll_from_lifetable(
       exp_central = input_data_mortality$exp[2], #exp CH 2019
       prop_pop_exp = 1,
       cutoff_central = input_data_mortality$cutoff[2], 
@@ -819,7 +819,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_1rr_geluft,
 # with exposure distribution (instead of population-weighted mean)
 
 bestcost_pm_yll_lifetable_expDistribution_geluft <- 
-    bestcost::attribute_yll_from_lifetable(
+    healthiar::attribute_yll_from_lifetable(
       exp_central = c(8, 9, 10), # Fake data just for testing purposes
       prop_pop_exp = c(0.2, 0.3, 0.5), # Fake data just for testing purposes
       cutoff_central = input_data_mortality$cutoff[2], # WHO AQG 2021 
@@ -949,7 +949,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_daly_lifetable_geluft,
 # DELTA
 
 comparison_singlebhd_rr_delta <-
-  bestcost::compare_health(
+  healthiar::compare_health(
     approach_comparison = "delta",
     exp_central_1 = 8.85, 
     exp_central_2 = 6,
@@ -973,7 +973,7 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_rr_delta ,
 
 # With iteration
 comparison_singlebhd_rr_delta_geo <-
-  bestcost::compare_health(
+  healthiar::compare_health(
     approach_comparison = "delta",
     exp_central_1 = list(8.85, 8.0),
     exp_central_2 = list(6, 6.5),
@@ -1000,7 +1000,7 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_rr_delta_geo ,
 #PIF
 # Test pif comparison function with fake values
 comparison_singlebhd_rr_pif <-
-  bestcost::compare(
+  healthiar::compare(
     approach_comparison = "pif",
     exp_central_1 = 8.85, 
     exp_central_2 = 6,
@@ -1024,7 +1024,7 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_rr_pif ,
 
 # With iteration
 comparison_singlebhd_rr_pif_geo <-
-  bestcost::compare_health(
+  healthiar::compare_health(
     approach_comparison = "pif",
     exp_central_1 = list(8.85, 8.0),
     exp_central_2 = list(6, 6.5),
@@ -1053,7 +1053,7 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_rr_pif_geo ,
 ```{r comparison singlebhd_rr geo iteration, eval=FALSE, include=FALSE}
 # Assess iteration in many geographical areas (geo_id) keeping the multiple uncertainties
 comparison_singlebhd_rr_geo <-
-  bestcost::compare_health(
+  healthiar::compare_health(
     approach_comparison = "delta",
     exp_central_1 = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)),
     exp_lower_1 = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)-0.1),
@@ -1087,7 +1087,7 @@ comparison_singlebhd_rr_geo <-
 # Test delta comparison function with fake values
 # No PIF option in ar
 comparison_singlebhd_ar_delta <-
-  bestcost::compare_health_ar(
+  healthiar::compare_health_ar(
     approach_comparison = "delta",
     exp_central_1 = c(57.5, 62.5, 67.5, 72.5, 77.5),# Values as example provided by NIPH
     exp_central_2 = c(50, 55, 60, 65, 75), # Fake values
@@ -1106,7 +1106,7 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_ar_delta ,
                result_vector_alternative = c(62531)) # Result on 23 May 2024
 
 comparison_singlebhd_ar_delta_geo <-
-  bestcost::compare_health_ar(
+  healthiar::compare_health_ar(
     approach_comparison = "delta",
     exp_central_1 = list(c(57.5, 62.5, 67.5, 72.5, 77.5), c(57, 62, 67, 72, 77)),# Fake values
     exp_central_2 = list(c(50, 55, 60, 65, 75), c(50.5, 55.5, 60.5, 65.5, 75.5)), # Fake values
@@ -1129,7 +1129,7 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_ar_delta_geo ,
 # DELTA
 # Test delta comparison function with fake values
 comparison_yld_singlebhd_rr_delta <-
-  bestcost::compare_yld_from_prevalence(
+  healthiar::compare_yld_from_prevalence(
     approach_comparison = "delta",
     exp_central_1 = 8.85, 
     exp_central_2 = 6,
@@ -1158,7 +1158,7 @@ check_bestcost(result_list_bestcost = comparison_yld_singlebhd_rr_delta[["detail
 
 # Iteration
 comparison_yld_singlebhd_rr_delta_geo <-
-  bestcost::compare_yld_from_prevalence(
+  healthiar::compare_yld_from_prevalence(
     approach_comparison = "delta",
     exp_central_1 = list(8.85, 8.0),
     exp_central_2 = list(6, 6.5),
@@ -1187,7 +1187,7 @@ check_bestcost(result_list_bestcost = comparison_yld_singlebhd_rr_delta_geo ,
 #PIF
 # Test pif comparison function with fake values
 comparison_yld_singlebhd_rr_pif <-
-  bestcost::compare_yld_from_prevalence(
+  healthiar::compare_yld_from_prevalence(
     approach_comparison = "pif",
     exp_central_1 = 8.85,  
     exp_central_2 = 6,
@@ -1216,7 +1216,7 @@ check_bestcost(result_list_bestcost = comparison_yld_singlebhd_rr_pif[["detailed
 
 # Iteration
 comparison_yld_singlebhd_rr_pif_geo <-
-  bestcost::compare_yld_from_prevalence(
+  healthiar::compare_yld_from_prevalence(
     approach_comparison = "pif",
     exp_central_1 = list(8.85, 8.0),
     exp_central_2 = list(6, 6.5),
@@ -1251,7 +1251,7 @@ check_bestcost(result_list_bestcost = comparison_yld_singlebhd_rr_pif_geo ,
 # DELTA
 
 comparison_deaths_lifetable_delta <-
-  bestcost::compare_deaths_from_lifetable(
+  healthiar::compare_deaths_from_lifetable(
     approach_comparison = "delta",
     exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
@@ -1295,7 +1295,7 @@ check_bestcost(result_list_bestcost = comparison_deaths_lifetable_delta[["detail
 
 # Iteration
 comparison_deaths_lifetable_delta_geo <-
-  bestcost::compare_deaths_from_lifetable(
+  healthiar::compare_deaths_from_lifetable(
     approach_comparison = "delta",
     exp_central_1 = list(8.85, 8.0),# Fake data just for testing purposes
     exp_central_2 = list(6, 6.5),# Fake data just for testing purposes
@@ -1350,7 +1350,7 @@ abs(comparison_deaths_lifetable_delta_geo[["detailed"]][["scenario_1"]][["detail
 
 # PIF
 comparison_deaths_lifetable_pif  <-
-  bestcost::compare_deaths_from_lifetable(
+  healthiar::compare_deaths_from_lifetable(
     approach_comparison = "pif",
     exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
@@ -1395,7 +1395,7 @@ check_bestcost(result_list_bestcost = comparison_deaths_lifetable_pif[["detailed
 
 # Iteration
 comparison_deaths_lifetable_pif_geo <-
-  bestcost::compare_deaths_from_lifetable(
+  healthiar::compare_deaths_from_lifetable(
     approach_comparison = "pif",
     exp_central_1 = list(8.85, 8.0),# Fake data just for testing purposes
     exp_central_2 = list(6, 6.5),# Fake data just for testing purposes
@@ -1440,7 +1440,7 @@ check_bestcost(result_list_bestcost = comparison_deaths_lifetable_pif_geo ,
 
 # DELTA 
 comparison_yll_lifetable_delta  <-
-  bestcost::compare_yll_from_lifetable(
+  healthiar::compare_yll_from_lifetable(
     approach_comparison = "delta",
     exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
@@ -1490,7 +1490,7 @@ check_bestcost(result_list_bestcost = comparison_yll_lifetable_delta[["detailed"
 
 # Iteration
 comparison_yll_lifetable_delta_geo <-
-  bestcost::compare_yll_from_lifetable(
+  healthiar::compare_yll_from_lifetable(
     approach_comparison = "delta",
     exp_central_1 = list(8.85, 8.0),# Fake data just for testing purposes
     exp_central_2 = list(6, 6.5),# Fake data just for testing purposes
@@ -1532,7 +1532,7 @@ check_bestcost(result_list_bestcost = comparison_yll_lifetable_delta_geo ,
 
 # PIF
 comparison_yll_lifetable_pif <-
-  bestcost::compare_yll_from_lifetable(
+  healthiar::compare_yll_from_lifetable(
     approach_comparison = "pif",
     exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
@@ -1579,7 +1579,7 @@ check_bestcost(result_list_bestcost = comparison_yll_lifetable_pif[["detailed"]]
 
 # Iteration
 comparison_yll_lifetable_pif_geo <-
-  bestcost::compare_yll_from_lifetable(
+  healthiar::compare_yll_from_lifetable(
     approach_comparison = "pif",
     exp_central_1 = list(8.85, 8.0),# Fake data just for testing purposes
     exp_central_2 = list(6, 6.5),# Fake data just for testing purposes
@@ -1624,7 +1624,7 @@ check_bestcost(result_list_bestcost = comparison_yll_lifetable_pif_geo ,
 
 # DELTA
 comparison_yld_lifetable_delta  <-
-  bestcost::compare_yld_from_lifetable(
+  healthiar::compare_yld_from_lifetable(
     approach_comparison = "delta",
     exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
@@ -1670,7 +1670,7 @@ check_bestcost(result_list_bestcost = comparison_yld_lifetable_delta[["detailed"
 
 # Iteration
 comparison_yld_lifetable_delta_geo <-
-  bestcost::compare_yld_from_lifetable(
+  healthiar::compare_yld_from_lifetable(
     approach_comparison = "delta",
     exp_central_1 = list(8.85, 8.0),# Fake data just for testing purposes
     exp_central_2 = list(6, 6.5),# Fake data just for testing purposes
@@ -1712,7 +1712,7 @@ check_bestcost(result_list_bestcost = comparison_yld_lifetable_delta_geo ,
 
 # PIF
 comparison_yld_lifetable_pif <-
-  bestcost::compare_yld_from_lifetable(
+  healthiar::compare_yld_from_lifetable(
     approach_comparison = "pif",
     exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
@@ -1758,7 +1758,7 @@ check_bestcost(result_list_bestcost = comparison_yld_lifetable_pif[["detailed"]]
 
 # Iteration
 comparison_yld_lifetable_pif_geo <-
-  bestcost::compare_yld_from_lifetable(
+  healthiar::compare_yld_from_lifetable(
     approach_comparison = "pif",
     exp_central_1 = list(8.85, 8.0),# Fake data just for testing purposes
     exp_central_2 = list(6, 6.5),# Fake data just for testing purposes
@@ -1805,7 +1805,7 @@ check_bestcost(result_list_bestcost = comparison_yld_lifetable_pif_geo ,
 
 # DELTA
 comparison_daly_lifetable_delta  <-
-  bestcost::compare_daly_from_lifetable(
+  healthiar::compare_daly_from_lifetable(
     approach_comparison = "delta",
     exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
@@ -1851,7 +1851,7 @@ check_bestcost(result_list_bestcost = comparison_daly_lifetable_delta[["detailed
 
 # Iteration
 comparison_daly_lifetable_delta_geo <-
-  bestcost::compare_daly_from_lifetable(
+  healthiar::compare_daly_from_lifetable(
     approach_comparison = "delta",
     exp_central_1 = list(8.85, 8.0),# Fake data just for testing purposes
     exp_central_2 = list(6, 6.5),# Fake data just for testing purposes
@@ -1893,7 +1893,7 @@ check_bestcost(result_list_bestcost = comparison_daly_lifetable_delta_geo ,
 
 # PIF
 comparison_daly_lifetable_pif <-
-  bestcost::compare_daly_from_lifetable(
+  healthiar::compare_daly_from_lifetable(
     approach_comparison = "pif",
     exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
@@ -1939,7 +1939,7 @@ check_bestcost(result_list_bestcost = comparison_daly_lifetable_pif[["detailed"]
 
 # Iteration
 comparison_daly_lifetable_pif_geo <-
-  bestcost::compare_daly_from_lifetable(
+  healthiar::compare_daly_from_lifetable(
     approach_comparison = "pif",
     exp_central_1 = list(8.85, 8.0),# Fake data just for testing purposes
     exp_central_2 = list(6, 6.5),# Fake data just for testing purposes
