Default branch for installation: "HEAD"

--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -65,7 +65,7 @@ if(!"healthiar" %in% installed.packages()[, "Package"]){
   credentials::set_github_pat() # paste github PAT if prompted
   devtools::install_github(repo = "best-cost/best-cost_WPs",
                            subdir = "/r_package/healthiar",
-                           ref = "renaming_package", # Branch name (by default "HEAD") as a string
+                           ref = "HEAD", # Branch name (by default "HEAD") as a string
                            force = TRUE)
 }
 library(healthiar)
