--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -494,8 +494,8 @@ bestcost_pm_copd_with_summary_uncertainty <-
     cutoff_lower = airqplus_pm_copd$cut_off_value - 1,
     cutoff_upper = airqplus_pm_copd$cut_off_value + 1,
     bhd_central = airqplus_pm_copd$incidents_per_100_000_per_year/1E5*airqplus_pm_copd$population_at_risk,
-    bhd_lower = (airqplus_pm_copd$incidents_per_100_000_per_year/1E5*airqplus_pm_copd$population_at_risk) + 5000,
-    bhd_upper = (airqplus_pm_copd$incidents_per_100_000_per_year/1E5*airqplus_pm_copd$population_at_risk) - 5000,
+    bhd_lower = (airqplus_pm_copd$incidents_per_100_000_per_year/1E5*airqplus_pm_copd$population_at_risk) - 5000,
+    bhd_upper = (airqplus_pm_copd$incidents_per_100_000_per_year/1E5*airqplus_pm_copd$population_at_risk) + 5000,
     rr_central = 1.118,
     rr_lower = 1.060, 
     rr_upper = 1.179,
@@ -505,11 +505,19 @@ bestcost_pm_copd_with_summary_uncertainty <-
     )
 
 # View(bestcost_pm_copd_with_summary_uncertainty)
-print("Summary uncertainty estimates: ")
+print("Summary uncertainty estimates (intern calculation): ")
 bestcost_pm_copd_with_summary_uncertainty[["detailed"]][["uncertainty"]]$central_estimate
 bestcost_pm_copd_with_summary_uncertainty[["detailed"]][["uncertainty"]]$lower_estimate
 bestcost_pm_copd_with_summary_uncertainty[["detailed"]][["uncertainty"]]$upper_estimate
 print("Main estimate: ") ; bestcost_pm_copd_with_summary_uncertainty[["main"]][["impact_rounded"]]
+
+# With external uncertainty function
+bestcost_pm_copd_extern_uncertainty <- healthiar::include_summary_uncertainty(bestcost_pm_copd_with_summary_uncertainty)
+
+print("Summary uncertainty estimates (extern uncertainty function): ")
+bestcost_pm_copd_extern_uncertainty[["detailed"]][["uncertainty"]]$central_estimate
+bestcost_pm_copd_extern_uncertainty[["detailed"]][["uncertainty"]]$lower_estimate
+bestcost_pm_copd_extern_uncertainty[["detailed"]][["uncertainty"]]$upper_estimate
 ```
 
 
