--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -319,7 +319,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_copd,
 ```
 
 
-```{r exposure distribution}
+```{r exposure distribution with rr}
 
 # Extract rows that contain input data (others may contain results)
 niph_noise_ihd_input <- 
@@ -341,6 +341,8 @@ niph_noise_ihd_result <-
 bestcost_noise_ihd_expDist <- 
   healthiar::attribute_health(
     exp_central = niph_noise_ihd_input$exposure_mean,
+    exp_lower = niph_noise_ihd_input$exposure_mean - 2,
+    exp_upper = niph_noise_ihd_input$exposure_mean + 2,
     prop_pop_exp = niph_noise_ihd_input$prop_exposed,
     cutoff_central = min(niph_noise_ihd_input$exposure_mean), 
     bhd_central = niph_noise_ihd_input$gbd_daly[1],
