--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -203,6 +203,9 @@ bestcost_pm_copd_multiple <-
     info = paste0(airqplus_pm_copd$pollutant,"_", airqplus_pm_copd$evaluation_name))
 
 # View(bestcost_pm_copd_multiple)
+check_bestcost(result_list_bestcost = bestcost_pm_copd_multiple,
+               result_vector_alternative = c(3502, 1353, 5474)) # Results on 5 November 2024
+
 
 
 # Assess iteration geographical sections keeping the multiple uncertainties
@@ -213,8 +216,10 @@ system.time(bestcost_pm_copd_geo <-
     exp_upper = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)+0.1),
     cutoff_central = 5,   
     bhd_central = as.list(runif_with_seed(1E4, 25000, 35000, 1)),
-    bhd_lower = as.list(runif_with_seed(1E4, 25000, 35000, 1)),
-    bhd_upper = as.list(runif_with_seed(1E4, 25000, 35000, 1)),
+    # bhd_lower = as.list(runif_with_seed(1E4, 25000, 35000, 1)),
+    bhd_lower = as.list(runif_with_seed(1E4, 20000, 30000, 1)),
+    # bhd_upper = as.list(runif_with_seed(1E4, 25000, 35000, 1)),
+    bhd_upper = 0,
     rr_central = 1.369, 
     rr_lower = 1.124,
     rr_upper = 1.664,
@@ -224,6 +229,32 @@ system.time(bestcost_pm_copd_geo <-
     geo_id_aggregated = rep("CH", 1E4),
     info = "PM2.5_copd"))
 
+# View(bestcost_pm_copd_geo)
+check_bestcost(result_list_bestcost = bestcost_pm_copd_geo,
+               result_vector_alternative = c(31460722, 12120764, 49312859)) # Results on 5 November 2024
+
+# Assess iteration geographical sections keeping the multiple uncertainties
+system.time(bestcost_pm_copd_geo_short <-
+  healthiar::attribute_health(
+    exp_central = as.list(runif_with_seed(1E1, 8.0, 9.0, 1)),
+    exp_lower = as.list(runif_with_seed(1E1, 8.0, 9.0, 1)-0.1),
+    exp_upper = as.list(runif_with_seed(1E1, 8.0, 9.0, 1)+0.1),
+    cutoff_central = 5,   
+    bhd_central = as.list(runif_with_seed(1E1, 25000, 35000, 1)),
+    bhd_lower = as.list(runif_with_seed(1E1, 25000, 35000, 1)),
+    bhd_upper = as.list(runif_with_seed(1E1, 25000, 35000, 1)),
+    rr_central = 1.369, 
+    rr_lower = 1.124,
+    rr_upper = 1.664,
+    erf_increment = 10, 
+    erf_shape = "log_linear", 
+    geo_id_raw = 1:1E1, 
+    geo_id_aggregated = rep("CH", 1E1),
+    info = "PM2.5_copd"))
+
+# View(bestcost_pm_copd_geo_short)
+check_bestcost(result_list_bestcost = bestcost_pm_copd_geo_short,
+               result_vector_alternative = c(32449, 12508, 50836)) # Results on 5 November 2024
 ```
 
 
@@ -524,6 +555,43 @@ bestcost_pm_copd_extern_uncertainty[["detailed"]][["uncertainty"]]$central_estim
 bestcost_pm_copd_extern_uncertainty[["detailed"]][["uncertainty"]]$lower_estimate
 bestcost_pm_copd_extern_uncertainty[["detailed"]][["uncertainty"]]$upper_estimate
 ```
+
+```{r Summary uncertainty rr single exposure iteration}
+
+# Assess iteration geographical sections keeping the multiple uncertainties
+bestcost_pm_copd_geo_short <-
+  healthiar::attribute_health(
+    exp_central = as.list(runif_with_seed(1E1, 8.0, 9.0, 1)),
+    exp_lower = as.list(runif_with_seed(1E1, 8.0, 9.0, 1)-0.1),
+    exp_upper = as.list(runif_with_seed(1E1, 8.0, 9.0, 1)+0.1),
+    cutoff_central = 5,
+    cutoff_lower = 4,
+    cutoff_upper = 6,
+    bhd_central = as.list(runif_with_seed(1E1, 25000, 35000, 1)),
+    # bhd_lower = as.list(runif_with_seed(1E1, 20000, 30000, 1)),
+    # bhd_upper = as.list(runif_with_seed(1E1, 30000, 40000, 1)) ,
+    bhd_upper = 0,
+    rr_central = 1.369, 
+    rr_lower = 1.124,
+    rr_upper = 1.664,
+    erf_increment = 10, 
+    erf_shape = "log_linear", 
+    geo_id_raw = 1:1E1, 
+    geo_id_aggregated = rep("CH", 1E1),
+    info = "PM2.5_copd")
+
+# View(bestcost_pm_copd_geo_short)
+check_bestcost(result_list_bestcost = bestcost_pm_copd_geo_short,
+               result_vector_alternative = c(32449, 12508, 50836)) # Results on 5 November 2024
+
+bestcost_pm_copd_geo_short_uncertainty <- 
+  healthiar::include_summary_uncertainty(bestcost_pm_copd_geo_short)
+
+
+```
+
+
+
 ```{r Test summary uncertainty rr & exposure distribution}
 
 # Data prep
@@ -563,6 +631,62 @@ bestcost_noise_ihd_expDist_extern_uncertainty[["detailed"]][["uncertainty"]]$cen
 bestcost_noise_ihd_expDist_extern_uncertainty[["detailed"]][["uncertainty"]]$lower_estimate
 bestcost_noise_ihd_expDist_extern_uncertainty[["detailed"]][["uncertainty"]]$upper_estimate
 ```
+
+
+
+```{r Summary uncertainty rr exposure distribution iteration}
+# Data prep
+niph_noise_ihd_input <- 
+  niph_noise_ihd_excel |>
+  dplyr::filter(!is.na(niph_noise_ihd_excel$exposure_mean))
+niph_noise_ihd_result <- 
+  niph_noise_ihd_excel |>
+        dplyr::filter(exposure_category %in% "Total exposed")|>
+        dplyr::select(daly)|>
+        dplyr::pull() |>
+  round()
+
+# Obtain attributable cases using the bestcost package and input data from niph
+bestcost_noise_ihd_expDist_iteration <- 
+  healthiar::attribute_health(
+    exp_central = list(niph_noise_ihd_input$exposure_mean,
+                       niph_noise_ihd_input$exposure_mean + 5,
+                       niph_noise_ihd_input$exposure_mean + 10),
+    # exp_lower = niph_noise_ihd_input$exposure_mean - 2,
+    # exp_upper = niph_noise_ihd_input$exposure_mean + 2,
+    prop_pop_exp = list(niph_noise_ihd_input$prop_exposed,
+                        niph_noise_ihd_input$prop_exposed + 0.1,
+                        niph_noise_ihd_input$prop_exposed + 0.2),
+    cutoff_central = min(niph_noise_ihd_input$exposure_mean), 
+    bhd_central = list(niph_noise_ihd_input$gbd_daly[1], 
+                       niph_noise_ihd_input$gbd_daly[1] + 5000,
+                       niph_noise_ihd_input$gbd_daly[1] + 10000),
+    rr_central = 1.08,
+    rr_lower = 1.08 - 0.02,
+    rr_upper = 1.08 + 0.02,
+    erf_increment = 10, 
+    erf_shape = "log_linear",
+    geo_id_raw = 1:3, 
+    geo_id_aggregated = rep("CH", 3),
+    info = data.frame(pollutant = "road_noise", outcome = "YLD"))
+
+# View(bestcost_noise_ihd_expDist_iteration)
+
+# CONTINUE HERE: EXPOSURE CATEGORIES NOT CORRECTLY INCLUDED IN OUTPUT ####
+# INSTEAD OF 5 EXPOSURE CATEGORIES, THERE ARE 15 PER ROW INCLUDED (ALL EXPOSURE CATEGORIES OF THE 3 GEO UNITS) IN THE COLUMN EXP (SEE BELOW) 
+View(bestcost_noise_ihd_expDist_iteration[["detailed"]][["raw"]])
+bestcost_noise_ihd_expDist_iteration[["detailed"]][["raw"]]$exp[1]
+
+bestcost_noise_ihd_expDist_iteration_uncertainty <- include_summary_uncertainty(bestcost_noise_ihd_expDist_iteration)
+
+print("Main estimate: ") ; bestcost_noise_ihd_expDist_iteration[["main"]][["impact_rounded"]]
+print("Summary uncertainty estimates (extern uncertainty function): ")
+bestcost_noise_ihd_expDist_iteration_uncertainty[["detailed"]][["uncertainty"]]$central_estimate
+bestcost_noise_ihd_expDist_iteration_uncertainty[["detailed"]][["uncertainty"]]$lower_estimate
+bestcost_noise_ihd_expDist_iteration_uncertainty[["detailed"]][["uncertainty"]]$upper_estimate
+
+```
+
 
 
 ```{r Test summary uncertainty rr attribute_yld_from_prevalence }
