--- a/r_package/testing/Preparation of input data.Rmd
+++ b/r_package/testing/Preparation of input data.Rmd
@@ -561,6 +561,16 @@ cutoff_rawdata <-
            na.strings=c("NA", ""))
 
 
+# cutoff
+social_mort_rawdata <- 
+  ## import burden
+  read.csv("../testing/input/inequalities/mort_pm25_sector_2019.csv")
+
+## import derpivation index
+social_bimd_rawdata <- 
+  read.csv("../testing/input/inequalities/BIMD_2011_WITHOUT_HEALTH_ELLIS_WIDE.csv")
+
+
 ```
 
 
@@ -1047,6 +1057,57 @@ cutoff_data <-
   
 ```
 
+# Social aspects
+```{r Input data and results for social aspects (deprivation index)}
+## subset Flanders (NUTS1 = BE2)
+social_mort_data <- 
+  dplyr::filter(
+  social_mort_rawdata,
+  NUTS1 == 'BE2' & POPULATION > 0)
+
+# Join input data tables
+social_data <-
+  dplyr::left_join(
+    x = social_mort_data,
+    y= social_bimd_rawdata,
+    by = c("CS01012020" = "CD_RES_SECTOR")) 
+
+# Data set to be used as input in the R package
+social_data_input <-
+  social_data |>
+  # Remove the columns rank and deciles (to be done by the R package)
+  dplyr::select(-rank, -deciles)
+  
+```
+
+```{r}
+## exposure and attributable burden per deprivation decile
+social_per_decile <- 
+  data.frame(
+    exposure_mean = with(social_data, tapply(PM25_MEAN, deciles, mean)),
+    mort_attr = 1e5 * with(social_data, tapply(MORTALITY_ATTR, deciles, sum))/
+      with(social_data, tapply(POPULATION, deciles, sum)),
+    mort_total = 1e5 * with(social_data, tapply(MORTALITY_TOTAL, deciles, sum))/
+      with(social_data, tapply(POPULATION, deciles, sum)))
+
+
+## inequalities
+
+social_results <- 
+  data.frame(
+    exp_abs_diff = social_per_decile[["exposure_mean"]][1] - social_per_decile[["exposure_mean"]][10], ## absolute diff,
+    exp_rel_diff = 100 * ( (social_per_decile[["exposure_mean"]][1] / social_per_decile[["exposure_mean"]][10]) - 1 ), ## relative diff
+    exp_paf_di = 100 * (mean(social_data$PM25_MEAN) - social_per_decile[["exposure_mean"]][10]) / mean(social_data$PM25_MEAN), # PAF
+    mort_abs_diff = social_per_decile[["mort_attr"]][1] - social_per_decile[["mort_attr"]][10], ## absolute diff
+    mort_rel_diff = 100 * ( (social_per_decile[["mort_attr"]][1] / social_per_decile[["mort_attr"]][10]) - 1 ), ## relative diff
+    mort_mean = (1e5 * sum(social_data$MORTALITY_ATTR) / sum(social_data$POPULATION))) |>
+  dplyr::mutate(
+    mort_paf_di = 100 * (mort_mean - social_per_decile[["mort_attr"]][10]) / mort_mean # PAF
+  )
+```
+
+
+
 # Misc
 ```{r Create Codebook}
 # Do not forget yll
@@ -1090,6 +1151,8 @@ input_data_mortality <-
   dplyr::filter(rr_id %in% rr_data_allCauseMortality$rr_id)
 ```
 
+
+
 ```{r Export environment}
 # Keep only variables/functions that will be used in "testing_Rpackage.Rmd"
 rm(list=setdiff(ls(), 
@@ -1112,7 +1175,10 @@ rm(list=setdiff(ls(),
                   "paste_round_CI",
                   "round_keeping0",
                   "check_bestcost",
-                  "runif_with_seed"
+                  "runif_with_seed",
+                  "social_data",
+                  "social_per_decile", 
+                  "social_results"
                   )))
 # save.image(file = "../testing/input/data/input_data_for_testing_Rpackage.RData")
 ```
