R code from sciensano has been adapted to be integrated in the R package with consistent syntax

--- a/r_package/testing/Preparation of input data.Rmd
+++ b/r_package/testing/Preparation of input data.Rmd
@@ -1080,7 +1080,7 @@ social_data_input <-
   
 ```
 
-```{r}
+```{r social results}
 ## exposure and attributable burden per deprivation decile
 social_per_decile <- 
   data.frame(
